# melband-roformer-infer

./: CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
notebooks/: quickstart_colab.ipynb
src/mel_band_roformer/: __about__.py  __init__.py  attend.py  checkpoints.py  clean_api.py  download.py  inference.py  mel_band_roformer.py  model_registry.py  utils.py
src/mel_band_roformer/config/: checkpoints.toml
src/mel_band_roformer/data/: checksums.json  melband_models.json  overrides.json
tests/: test_device_resolution.py  test_download.py  test_model_configs.py  test_output_manifest.py  test_session_contract.py  test_twin_backports.py  test_weights_liveness.py  test_weights_ux.py
tools/: check_weights_liveness.py
