[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "melband-roformer-infer"
dynamic = ["version"]
description = "Inference-only Mel-Band Roformer vocal separation toolkit"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "OpenMIRLab", email = "bernie40916@gmail.com" }
]
keywords = [
    "audio",
    "source-separation",
    "vocals",
    "roformer",
    "pytorch",
    "inference"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "torch>=2.0",
    "numpy>=1.23",
    "soundfile>=0.12",
    "ml_collections>=0.1.1",
    "tqdm>=4.64",
    "beartype>=0.14",
    "rotary-embedding-torch>=0.3.5",
    "einops>=0.6.1",
    "librosa>=0.9",
    "PyYAML>=6.0",
    "requests>=2.31",
    "packaging>=14.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.5",
]

[project.urls]
Homepage = "https://github.com/openmirlab/melband-roformer-infer"
Documentation = "https://github.com/openmirlab/melband-roformer-infer#readme"
Repository = "https://github.com/openmirlab/melband-roformer-infer"
Issues = "https://github.com/openmirlab/melband-roformer-infer/issues"

[project.scripts]
melband-roformer-infer = "mel_band_roformer.inference:main"
melband-roformer-download = "mel_band_roformer.download:main"

[tool.hatch.version]
path = "src/mel_band_roformer/__about__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/mel_band_roformer"]

[tool.hatch.build]
include = [
    "src/mel_band_roformer/**/*.py",
    "src/mel_band_roformer/configs/*.yaml",
    "src/mel_band_roformer/data/*.json",
]

[tool.uv]
dev-dependencies = [
    "build>=1.3.0",
    "pytest>=7.0",
    "ruff>=0.5",
    "twine>=6.2.0",
]

[tool.pytest.ini_options]
markers = [
    "network: hits real network endpoints (deselected by default, run with -m network)",
]
addopts = "-m 'not network'"
